--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@mantine/hooks": "^8.3.8",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.2.4",
+    "@tabler/icons-react": "^3.35.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
-    "motion": "^11.11.17",
+    "motion": "^12.23.25",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-dropzone": "^14.3.8",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
