--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-dropzone": "^14.3.8",
+    "react-easy-crop": "^5.5.6",
     "react-pdf": "^10.3.0",
     "react-rnd": "^10.5.2",
     "sonner": "^2.0.7",
