--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tabler/icons-react": "^3.35.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.25",
     "next": "16.0.3",
