--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.25",
-    "next": "16.0.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-dropzone": "^14.3.8",
     "react-easy-crop": "^5.5.6",
     "react-pdf": "^10.3.0",
@@ -44,7 +44,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
