--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test:limiter": "tsx lib/testLimiter.ts"
   },
   "dependencies": {
     "@mantine/core": "^8.3.8",
@@ -23,9 +24,12 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.39.0",
     "@tabler/icons-react": "^3.35.0",
+    "bottleneck": "^2.19.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.4",
     "html2canvas": "^1.4.1",
+    "ioredis": "^5.9.2",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.25",
     "next": "^16.1.6",
@@ -35,17 +39,21 @@
     "react-easy-crop": "^5.5.6",
     "react-pdf": "^10.3.0",
     "react-rnd": "^10.5.2",
+    "redis": "^5.10.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/ioredis": "^5.0.0",
+    "@types/node": "^25.2.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   }
 }
